--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,30 @@
-#invite-group-button-extension {
+#invite-group-button-pimpMyWolt {
     font-size: 14px;
     color: #009de0;
     text-align: right;
     cursor: pointer;
+}
+
+.participant-pimpMyWolt {
+    display: flex;
+    align-items: center;
+}
+
+.action-button-pimpMyWolt {
+    cursor: pointer;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+    -webkit-margin-start: 0;
+    margin-inline-start: 0;
+    -webkit-margin-end: 0.5rem;
+    margin-inline-end: 0.5rem;
+    background-color: #f6f6f6;
+    border: 1px solid #f6f6f6;
+    transition: border 0.1s linear;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
 }
