fix group member input field

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,11 @@
     cursor: pointer;
 }
 
+.pimp_my_wolt__input {
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
 .participant-pimpMyWolt {
     display: flex;
     align-items: center;
