--- a/src/wheel/wheelstyle.css
+++ b/src/wheel/wheelstyle.css
@@ -8,7 +8,7 @@
   display: block;
 }
 
-#spin {
+#spin-pimpMyWolt {
   font: 1.5em/0 sans-serif;
   user-select: none;
   cursor: pointer;
@@ -28,11 +28,16 @@
   transition: 0.8s;
 }
 
-#spin::after {
+#spin-pimpMyWolt::after {
   content: '';
   position: absolute;
   top: -17px;
   border: 10px solid transparent;
   border-bottom-color: currentColor;
   border-top: none;
+}
+
+.disabled-pimpMyWolt {
+  pointer-events: none;
+  opacity: 0.5;
 }
